feat(dp): dp, mock, safe

--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+    "./*": {
+      "import": {
+        "types": "./dist/*/index.d.ts",
+        "default": "./dist/*/index.js"
+      }
     }
   },
-  "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "package.json"
   ],
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rslib build",
     "check": "biome check --write",
@@ -26,7 +29,8 @@
     "@rstest/adapter-rslib": "^0.2.0",
     "@rstest/core": "^0.8.5",
     "@types/node": "^24.10.13",
+    "happy-dom": "^20.7.0",
     "typescript": "^5.9.3"
   },
-  "private": true
+  "private": false
 }
