--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["@rstest/core/globals"],
     "lib": ["ES2022"],
     "module": "ESNext",
     "noEmit": true,
