--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@rstackio/services",
   "version": "1.0.0",
+  "private": false,
   "type": "module",
   "exports": {
     "./*": {
@@ -14,23 +15,47 @@
     "dist",
     "package.json"
   ],
-  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rslib build",
     "check": "biome check --write",
     "dev": "rslib build --watch",
     "format": "biome format --write",
+    "preinstall": "npx only-allow pnpm",
+    "lint": "biome check",
+    "prepare": "simple-git-hooks",
     "test": "rstest",
     "test:watch": "rstest --watch"
   },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged",
+    "commit-msg": "pnpm commitlint --edit"
+  },
+  "lint-staged": {
+    "package.json": [
+      "sort-package-json",
+      "biome check --diagnostic-level=error --write --no-errors-on-unmatched"
+    ],
+    "*.{js,ts,mts,tsx,css,md,json}": [
+      "biome check --diagnostic-level=error --write --no-errors-on-unmatched"
+    ]
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.4.4",
+    "@commitlint/cli": "^20.4.2",
+    "@commitlint/config-conventional": "^20.4.2",
     "@rslib/core": "^0.19.6",
     "@rstest/adapter-rslib": "^0.2.0",
     "@rstest/core": "^0.8.5",
     "@types/node": "^24.10.13",
     "happy-dom": "^20.7.0",
+    "lint-staged": "^16.3.0",
+    "simple-git-hooks": "^2.13.1",
+    "sort-package-json": "^3.6.1",
     "typescript": "^5.9.3"
   },
-  "private": false
+  "packageManager": "pnpm@10.30.3",
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=10.0.0"
+  }
 }
