--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "@rstackio/services",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://github.com/rstackio/services#readme",
+  "bugs": {
+    "url": "https://github.com/rstackio/services/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rstackio/services.git"
+  },
   "license": "MIT",
+  "author": {
+    "name": "Rudolf Kovalov",
+    "url": "https://github.com/rkovalov"
+  },
   "type": "module",
   "exports": {
     "./*": {
