chore(pkg): add keywords for npm discoverability

--- a/package.json
+++ b/package.json
@@ -2,6 +2,29 @@
   "name": "@rstackio/services",
   "version": "0.1.0",
   "private": false,
+  "keywords": [
+    "abort",
+    "async",
+    "axios",
+    "chainable",
+    "data-fetching",
+    "data-layer",
+    "data-provider",
+    "dx",
+    "error-handling",
+    "fetch",
+    "fetcher",
+    "ky",
+    "mock",
+    "promise",
+    "promisify",
+    "provider",
+    "safe",
+    "type-safe",
+    "typescript",
+    "logger",
+    "log"
+  ],
   "homepage": "https://github.com/rstackio/services#readme",
   "bugs": {
     "url": "https://github.com/rstackio/services/issues"
