feat(config): add knip for unused deps and exports detection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Check types
         run: pnpm check:types
 
+      - name: Check deps
+        run: pnpm check:deps
+
       - name: Lint and Format
         run: pnpm format:lint
 
