--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Check types
         run: pnpm check:types
 
+      - name: Check deps
+        run: pnpm check:deps
+
       - name: Lint and Format
         run: pnpm format:lint
 
