ci(ci): run lint and tests only on changed files per pr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Resolve changed files
         run: |
+          git fetch origin ${{ github.base_ref }} --depth=1
           echo "CHANGED=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | tr '\n' ' ')" >> $GITHUB_ENV
 
       - name: Lint and Format
