--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Check deps
         run: pnpm check:deps
 
+      - name: Check changeset
+        run: pnpm changeset status --since origin/${{ github.base_ref }}
+
       - name: Resolve changed files
         run: |
           set -eo pipefail  # fail fast: exit on error (-e) and propagate pipe failures (-o pipefail)
