--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["src", "test"]
+  "include": ["src"]
 }
